...
    <item
        android:id="@+id/journal"
        android:title="Journal"
        android:icon="@drawable/ic_clipboard_svgrepo_com" />

    <item
        android:id="@+id/browse"
        android:title="Browse"
        android:icon="@drawable/ic_list_with_bullets_svgrepo_com" />

</menu>
